force-app/main/default/objects/Request_For_Quotation__c/Request_For_Quotation__c.object-meta.xml
<CustomObject>
    <description>Request for Quotation records linked to approved RFPs and used for supplier pricing comparisons.</description>
    <label>Request for Quotation</label>
    <nameField>
        <displayFormat>RFQ-{00000}</displayFormat>
        <label>RFQ Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests for Quotation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>