force-app/main/default/objects/Request_For_Quotation__c/fields/Evaluation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Notes__c</fullName>
    <label>Evaluation Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>