force-app/main/default/objects/Request_For_Quotation__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipName>Purchase_Order_RFQs</relationshipName>
    <relationshipLabel>Purchase Order RFQs</relationshipLabel>
    <type>Lookup</type>
</CustomField>