force-app/main/default/objects/Request_For_Quotation__c/fields/Quote_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quote_Amount__c</fullName>
    <label>Quote Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <required>true</required>
    <type>Currency</type>
</CustomField>