force-app/main/default/objects/Request_For_Quotation__c/fields/Request_For_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Request_For_Proposal__c</fullName>
    <label>Request for Proposal</label>
    <referenceTo>Request_For_Proposal__c</referenceTo>
    <relationshipName>Request_For_Quotations</relationshipName>
    <relationshipLabel>Requests for Quotation</relationshipLabel>
    <type>Lookup</type>
</CustomField>