force-app/main/default/objects/Request_For_Quotation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Sent</fullName><default>false</default><label>Sent</label></value>
            <value><fullName>Quoted</fullName><default>false</default><label>Quoted</label></value>
            <value><fullName>Selected</fullName><default>false</default><label>Selected</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
            <value><fullName>Converted to PO</fullName><default>false</default><label>Converted to PO</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>