force-app/main/default/objects/Request_For_Quotation__c/validationRules/Valid_Until_Not_Past.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>Valid until date must not be in the past.</description>
    <errorConditionFormula>Valid_Until__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Valid_Until__c</errorDisplayField>
    <errorMessage>Valid until date cannot be in the past.</errorMessage>
</ValidationRule>