force-app/main/default/objects/Request_For_Quotation__c/listViews/All_RFQs.listView-meta.xml
<ListView>
    <filterScope>Everything</filterScope>
    <label>All RFQs</label>
</ListView>