force-app/main/default/objects/Request_For_Quotation__c/listViews/Ready_for_PO_Conversion.listView-meta.xml
<ListView>
    <columns>Name</columns>
    <columns>Supplier_Name__c</columns>
    <columns>Quote_Amount__c</columns>
    <columns>Valid_Until__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Selected</value>
    </filters>
    <label>Ready for PO Conversion</label>
</ListView>